Fixed button spacing/layout on xsmall & small sizes [WEB-3072]

--- a/frontend/scss/pages/types/_t-research-center.scss
+++ b/frontend/scss/pages/types/_t-research-center.scss
@@ -158,12 +158,12 @@
       display: flex;
       gap: 60px;
 
-      @include breakpoint('xsmall') {
+      @include breakpoint('small-') {
         gap: 20px;
         padding: 15px;
       }
 
-      @include breakpoint('small+') {
+      @include breakpoint('medium+') {
         flex-direction: row;
       }
 
@@ -203,8 +203,9 @@
       flex-direction: column;
       gap: 28px;
 
-      @include breakpoint('xsmall') {
+      @include breakpoint('small-') {
         gap: 15px;
+        width: 100%;
       }
 
       .btn {
